2011-09-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/parse.c (parse_sum_expression): Simplify construction of summation
	action table.

2011-09-06  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in: cairo_ps_surface_set_eps is only supported by cairo
	version 1.6.0 or later.

2011-09-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c term/canvas.trm: Allow canvas and svg terminals to provide
	mousing even if gnuplot itself is built without USE_MOUSE.

	* src/gplt_x11.c src/Makefile.am:  gnuplot_x11 --version

2011-09-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (fn_completion, tab_completion, isdoublewidth)
	src/win/screenbuf.h (sb_calc_length) src/win/wcommon.h (open_printer,
	close_printer) src/win/wgraph.c (UnicodeText) src/win/winmain.c
	(ShutDown, CheckMemory) src/win/wmenu.c: Add missing prototypes, 
	make local functions static.

	* src/alloc.c src/alloc.h src/ansicheck.h src/command.c src/command.h
	src/plot.c src/scanner.c src/stdfn.c src/syscfg.h src/term.c:
	Remove conditional code for Atari Pure C and Borland C compilers.

	* src/axis.c src/command.c src/datafile.c src/getcolor.c src/misc.c
	src/pm3d.c src/variable.c: Remove unused variables and prototypes.

2011-09-03  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm term/canvas.trm term/js/gnuplot_mouse.js
	term/js/gnuplot_svg.js:  Add support for time coordinates to the mousing
	code used by svg and canvas terminals.  In this initial implementation,
	only the primary X axis is checked, and there is no provision for a
	user-supplied format.

2011-09-02  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in term/cairo.trm:  Check for the presence of cairo-ps.h
	before trying to build the epscairo terminal.

2011-09-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* docs/makefile.ami docs/old/README.ami docs/old/README.win 
	src/gnuplot.prj src/linkopt.ztc: Removed.

	* config/makefile.unx docs/Makefile.in src/Makefile.am: Remove