@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: eval.c,v 1.94 2011/08/27 11:18:01 juhaszp Exp $"); }
+static char *RCSid() { return RCSid("$Id: eval.c,v 1.95 2011/09/08 05:19:07 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - eval.c */
@@ -689,6 +689,30 @@ get_udv_by_name(char *key)
     }
 
     return NULL;
+}
+
+void
+del_udv_by_name( char *key, TBOOLEAN wildcard )
+{
+    struct udvt_entry *udv_ptr = first_udv;
+
+    while (udv_ptr) {
+ 	/* exact match */
+	if (!wildcard && !strcmp(key, udv_ptr->udv_name)) {
+	    udv_ptr->udv_undef = TRUE;
+	    gpfree_string(&(udv_ptr->udv_value));
+	    break;
+	}
+
+	/* wildcard match: prefix matches */
+	if ( wildcard && !strncmp(key, udv_ptr->udv_name, strlen(key)) ) {
+	    udv_ptr->udv_undef = TRUE;
+	    gpfree_string(&(udv_ptr->udv_value));
+	    /* no break - keep looking! */
+	}
+
+	udv_ptr = udv_ptr->next_udv;
+    }
 }
 
 static void update_plot_bounds __PROTO((void));
